# stablecaps-pycookiecutter-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  codeql-analysis.yml  github-repo-stats.yml  greetings.yml  release-drafter.yml
hooks/: post_gen_project.py
stablecaps/stablecaps-pycookiecutter-template/: README.md
stablecaps/stablecaps-pycookiecutter-template/ghrs-data/: views_clones_aggregate.csv
stablecaps/stablecaps-pycookiecutter-template/ghrs-data/snapshots/: 2024-02-09_193803_views_clones_series_fragment.csv  2024-02-09_231411_views_clones_series_fragment.csv  2024-02-10_231413_views_clones_series_fragment.csv  2024-02-11_231303_views_clones_series_fragment.csv  2024-02-12_231352_views_clones_series_fragment.csv  2024-02-13_231411_views_clones_series_fragment.csv  2024-02-14_231522_views_clones_series_fragment.csv  2024-02-15_231458_views_clones_series_fragment.csv  2024-02-16_231319_views_clones_series_fragment.csv  2024-02-17_231315_views_clones_series_fragment.csv  2024-02-18_231338_views_clones_series_fragment.csv  2024-02-19_231325_views_clones_series_fragment.csv  2024-02-20_231341_views_clones_series_fragment.csv  2024-02-21_231505_views_clones_series_fragment.csv  2024-02-22_231714_views_clones_series_fragment.csv  2024-02-23_231322_views_clones_series_fragment.csv  2024-02-24_231514_views_clones_series_fragment.csv  2024-02-25_231349_views_clones_series_fragment.csv  2024-02-26_231449_views_clones_series_fragment.csv  2024-02-27_231312_views_clones_series_fragment.csv  2024-02-28_231645_views_clones_series_fragment.csv  2024-02-29_231434_views_clones_series_fragment.csv  2024-03-01_231346_views_clones_series_fragment.csv  2024-03-02_231356_views_clones_series_fragment.csv  2024-03-03_231316_views_clones_series_fragment.csv  2024-03-04_231502_views_clones_series_fragment.csv  2024-03-05_231335_views_clones_series_fragment.csv  2024-03-06_231500_views_clones_series_fragment.csv  2024-03-07_231558_views_clones_series_fragment.csv  2024-03-08_231539_views_clones_series_fragment.csv  2024-03-09_231422_views_clones_series_fragment.csv  2024-03-10_231443_views_clones_series_fragment.csv  2024-03-11_231457_views_clones_series_fragment.csv  2024-03-12_231530_views_clones_series_fragment.csv  2024-03-13_231415_views_clones_series_fragment.csv  2024-03-14_231346_views_clones_series_fragment.csv  2024-03-15_231526_views_clones_series_fragment.csv  2024-03-16_231518_views_clones_series_fragment.csv  2024-03-17_231525_views_clones_series_fragment.csv  2024-03-18_231428_views_clones_series_fragment.csv  (+220 more)
stablecaps/stablecaps-pycookiecutter-template/latest-report/: report.html  report.md  report_for_pdf.html
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/.github/workflows/: build.yml  github-repo-stats.yml  greetings.yml  release-drafter.yml
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/_make/: gen_reposecrets.sh  install_venv.sh  mod_github_settings.py  upload_repo_secret.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/docker/: Dockerfile
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/tests/: test_hello.py
{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: example.py
